log/build_2026-02-18_20-19-18/pkg_action/stderr.log
  File "/var/robotic/yahboomcar_ws/install/pkg_action/lib/python3.10/site-packages/pkg_action/action_client_demo.py", line 5
    ​
    ^
SyntaxError: invalid non-printable character U+200B

